# libphysis

./: .build.yml  .gitignore  Cargo.toml  README.md  REUSE.toml  build.rs  deny.toml
.github/workflows/: main.yml
.reuse/: dep5
logger/: CMakeLists.txt
logger/include/: physis_logger.h
logger/src/: physis_logger.cpp
src/: amb.rs  atch.rs  avfx.rs  blowfish.rs  bootdata.rs  cfg.rs  chardat.rs  cmp.rs  cutb.rs  dic.rs  eid.rs  envb.rs  equipment.rs  essb.rs  exd.rs  execlookup.rs  exh.rs  existing_dirs.rs  exl.rs  fdt.rs  gamedata.rs  hwc.rs  index.rs  installer.rs  layer.rs  lcb.rs  lgb.rs  lib.rs  logging.rs  lvb.rs  model.rs  mtrl.rs  obsb.rs  pap.rs  patch.rs  patchlist.rs  pbd.rs  pcb.rs  phyb.rs  race.rs  (+16 more)
