[package]
name = "libphysis"
version = "0.5.0"
authors = ["Joshua Goins <josh@redstrate.com>"]
edition = "2024"
description = "C bindings for physis"
license = "GPL-3.0"
repository = "https://git.sr.ht/~redstrate/libphysis"
keywords = ["ffxiv", "modding"]
readme = "README.md"
publish = false

[lib]
name = "physis"
crate-type = ["staticlib"]

[profile.release]
lto = true

[build-dependencies]
cbindgen = { version = "0.29", default-features = false }

[dependencies]
physis = { version = "0.5", default-features = false }
miscel = { version = "0.2", default-features = false }
